--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.kafeblog</groupId>
+  <groupId>com.kafeblog.vertx</groupId>
   <artifactId>image-magick</artifactId>
   <packaging>jar</packaging>
   <version>0.1-alpha</version>
-  <name>Project - image-magick</name>
-  <url>http://maven.apache.org</url>
+  <name>Vert.x ImageMagick module</name>
+  <url>https://github.com/khoinguyen/vertx-imagemagick</url>
 
   <parent>
      <groupId>org.sonatype.oss</groupId>
